--- a/_config.yml
+++ b/_config.yml
@@ -27,21 +27,21 @@ author:
   name             : "Oussama Trabelsi"
   pronouns         : # example: "she/her"  
   bio              : "PhD student in urban planing"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Montréal, Canada"
+  employer         : "McGill University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "oussama.trabelsi@mail.mcgill.ca" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=zVthQsAAAAAJ&hl=fr"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "https://orcid.org/yourorcidurl"
+  orcid            : "ttps://orcid.org/0009-0004-7765-5045"
   semantic         : # URL
   ssrn             : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   researchgate     : # URL
   scopus           : # URL
   zotero           : # URL
@@ -51,13 +51,13 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "OussemaTrabelsi98"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "oussama-trabelsi1998"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
