--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ title                    : "Oussama Trabelsi"
 title_separator          : "-"
 name                     : &name "Oussama Trabelsi"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://oussematrabelsi98.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : "https://oussematrabelsi.site" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "ssemaTrabelsi98/oussematrabelsi98.github.ioo"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Oussama Trabelsi"
   pronouns         : # example: "she/her"  
-  bio              : "PhD student in urban planing"
+  bio              : "PhD student in urban planning"
   location         : "Montréal, Canada"
   employer         : "McGill University"
   uri              : # URL
@@ -38,7 +38,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=zVthQsAAAAAJ&hl=fr"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "ttps://orcid.org/0009-0004-7765-5045"
+  orcid            : "https://orcid.org/0009-0004-7765-5045"
   semantic         : # URL
   ssrn             : # URL
   pubmed           : 
