--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Oussama Trabelsi"
 title_separator          : "-"
 name                     : &name "Oussama Trabelsi"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Oussama Trabelsi website"   # Update this with a general description of your site, this is the default if not overridden by a page
 url: "https://oussamatrabelsi.site"
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
